--- a/index.html
+++ b/index.html
@@ -12,11 +12,23 @@
         <h1 class="Idea">The Book Store</h1>
         <h3 class ="Sub-Idea">Discover our latest bestsellers</h3>
         <section class="blank">
-            <section class="links">Links
-                <section>Customer Favs</section>
-                <section>Special Values</section>
+            <section class="links">
+                <section class="customer">Customer Favs
+                    <a href="https://www.barnesandnoble.com/b/summer-reading/_/N-2m39">Summer Reading</a>
+                    <a href="https://www.barnesandnoble.com/b/books/_/N-1fZ29Z8q8">B&N Top 100</a>
+                    <a href="https://www.barnesandnoble.com/b/books/teens-ya/_/N-1fZ29Z8q8Z19r4">Teen & YA Top 100</a>
+                    <a href="https://www.barnesandnoble.com/b/books/kids/_/N-1fZ29Z8q8Ztu1">Kids Top 100</a>
+                </section>
+                <br/>
+                <section class="special">Special Values
+                    <a href="https://www.barnesandnoble.com/b/buy-one-get-one-50-off/_/N-2quk">Buy 1 get 1 50% off</a>
+                    <a href="https://www.barnesandnoble.com/b/bn-stores-bestsellers-hardcover-fiction-nonfiction/_/N-1p4n">Bestsellers 30% off</a>
+                    <a href="https://www.barnesandnoble.com/b/up-to-30-off-the-biggest-books-pre-order-now/_/N-2vcj">Up to 30% off Pre-Orders</a>
+                </section>
             </section>
-            <section class="buy">Buy 1, Get 1 50% off</section>
+            <section class="buy">Buy 1, Get 1 50% off
+                    Need inspiration on what to read this month? Discover the best picks of the month from the book experts at Barnes & Noble. Shop All Buy 1, Get 1 50% Off Books
+            </section>
             <section class="books">
                 <section>Out August Picks</section>
                 <section>Books Images</section>
