Centered everything using align-items

--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
                     <a href="https://www.barnesandnoble.com/b/books/teens-ya/_/N-1fZ29Z8q8Z19r4">Teen & YA Top 100</a>
                     <a href="https://www.barnesandnoble.com/b/books/kids/_/N-1fZ29Z8q8Ztu1">Kids Top 100</a>
                 </section>
-                <br/>
+                
                 <section class="special">Special Values
                     <a href="https://www.barnesandnoble.com/b/buy-one-get-one-50-off/_/N-2quk">Buy 1 get 1 50% off</a>
                     <a href="https://www.barnesandnoble.com/b/bn-stores-bestsellers-hardcover-fiction-nonfiction/_/N-1p4n">Bestsellers 30% off</a>
                     <a href="https://www.barnesandnoble.com/b/up-to-30-off-the-biggest-books-pre-order-now/_/N-2vcj">Up to 30% off Pre-Orders</a>
                 </section>
             </section>
-            <section class="buy">Buy 1, Get 1 50% off
-                    Need inspiration on what to read this month? Discover the best picks of the month from the book experts at Barnes & Noble. Shop All Buy 1, Get 1 50% Off Books
+            <section class="buy">Buy 1, Get 1 50% off: Need inspiration on what to read this month? Discover the best picks of the month from the book experts at Barnes & Noble. Shop All Buy 1, Get 1 50% Off Books
             </section>
             <section class="books">
-                <section>Out August Picks</section>
-                <section>Books Images</section>
+                <section class="picks"><strong>Our August Picks</strong></section>
+                <section class="place-bear"><img src="https://placebear.com/200/300"> 
+                    <img src="https://placebear.com/200/300">
+                    <img src="https://placebear.com/200/300"></section>
             </section>
         </section>
     </main>
