this is silly, but I just changed the images since we are almost on with this assignment time

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             </section>
             <section class="books">
                 <section class="picks"><strong>Our August Picks</strong></section>
-                <section class="place-bear"><img src="https://placebear.com/200/300"> 
-                    <img src="https://placebear.com/200/300">
-                    <img src="https://placebear.com/200/300"></section>
+                <section class="place-bear"><img src="https://placebear.com/175/300"> 
+                    <img src="http://placekitten.com/175/300">
+                    <img src="http://baconmockup.com/175/300"></section>
             </section>
         </section>
     </main>
