added the correct subheading

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="outer-box">
         <h1 class="Idea">The Book Store</h1>
-        <h3 class ="Sub-Idea">Discover our latest bestsellers</h3>
+        <h3 class ="Sub-Idea">Discover the best books to read right now including trending titles, bookseller recommendations, new releases and more.</h3>
         <section class="blank">
             <section class="links">
                 <section class="customer">Customer Favs
